Fixed bug with doesn't click on IOS

--- a/src/sass/base/_base.sass
+++ b/src/sass/base/_base.sass
@@ -3,6 +3,8 @@ body
   font-size: 18px
   line-height: 1.42857143
 
+  cursor: pointer
+
   @extend .font-general !optional
 
   @extend .font-weight-regular !optional
