--- a/src/sass/layouts/nav/_nav-fixed.sass
+++ b/src/sass/layouts/nav/_nav-fixed.sass
@@ -1,8 +1,10 @@
 +b("fixed")
   position: fixed
   width: 100%
+  top: 0
   left: 0
   z-index: z("fixed")
+  min-height: 56px
 
   +max(md)
     & + .site
