--- a/src/sass/layouts/nav/_nav.sass
+++ b/src/sass/layouts/nav/_nav.sass
@@ -5,13 +5,10 @@
 
 	+max(md)
 		&_style
-			position: fixed
 			display: flex
 			align-items: center
 			width: 100%
 			height: 56px
-			left: 0
-			top: 0
 			padding: 11px 0
 			background-color: $color-responsive-menu
 			box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12)
