--- a/src/sass/layouts/nav/hamburger/_nav-hamburger-effect-2.sass
+++ b/src/sass/layouts/nav/hamburger/_nav-hamburger-effect-2.sass
@@ -6,10 +6,10 @@
 
 			&:nth-child(2),	
 			&:nth-child(3)
-				top: 10px
+				top: 13px
 
 			&:nth-child(4)
-				top: 20px
+				top: 25px
 
 	&_effect-2.active &__lines
 		span
