--- a/src/sass/layouts/nav/hamburger/_nav-hamburger.sass
+++ b/src/sass/layouts/nav/hamburger/_nav-hamburger.sass
@@ -1,7 +1,7 @@
 // Variables
 
-$hamburger-width: 26px
-$hamburger-height: 24px
+$hamburger-width: 35px
+$hamburger-height: 30px
 $hamburger-transistion-duration: 0.3s
 $hamburger-line-width: 100%
 $hamburger-line-height: 4px
@@ -23,6 +23,9 @@ $hamburger-line-radius: 4px
 	outline: none
 	appearance: none
 	-webkit-tap-highlight-color: transparent
+	cursor: pointer
+	z-index: 100
+	+relative
 
 	@extend %hamburger-transition
 
